# issue-triage-bot

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
dashboard/: index.html
src/: container.py  main.py
src/analyzers/: __init__.py  categorizer.py  completeness_checker.py  duplicate_detector.py  priority_detector.py  response_generator.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/api/middleware/: error_handler.py  logging.py
src/api/routes/: analyze.py  health.py  webhook.py
src/application/: __init__.py  orchestrator.py  webhook_handler.py
src/config/: __init__.py  logging.py  settings.py
src/domain/: __init__.py  entities.py  enums.py  exceptions.py  interfaces.py
src/generators/: __init__.py  comment_builder.py  label_manager.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  loader.py  schema.py
src/infrastructure/github/: __init__.py  auth.py  client.py  webhook.py
tests/: conftest.py
tests/unit/: test_categorizer.py  test_completeness_checker.py  test_priority_detector.py  test_response_generator.py
